unpackaged/main/default/objects/n2de__Object_sync_log__c/n2de__Object_sync_log__c.object-meta.xml
<CustomObject>
    <label>Object sync log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object sync logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>