unpackaged/main/default/objects/n2de__Object_sync_log__c/fields/n2de__Actions_performed__c.field-meta.xml
<CustomField>
    <fullName>n2de__Actions_performed__c</fullName>
    <description>Comma-separated list of post-processing actions performed for this record.</description>
    <label>Actions performed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>