unpackaged/main/default/objects/n2de__Object_sync_log__c/fields/n2de__Assignee__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignee_object_sync_logs</relationshipName>
    <type>Lookup</type>
</CustomField>