unpackaged/main/default/objects/n2de__Object_sync_log__c/fields/n2de__Assignee_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assignee_name__c</fullName>
    <description>Assignee name</description>
    <label>Assignee name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>