unpackaged/main/default/objects/n2de__Object_sync_log__c/fields/n2de__In_error__c.field-meta.xml
<CustomField>
    <fullName>n2de__In_error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if an error occurred while trying to sync related records for this object</description>
    <label>In error</label>
    <type>Checkbox</type>
</CustomField>