unpackaged/main/default/objects/n2de__Object_sync_log__c/fields/n2de__Number_of_synced_records__c.field-meta.xml
<CustomField>
    <fullName>n2de__Number_of_synced_records__c</fullName>
    <description>Number of related records that were synced for the assigned record</description>
    <label>Number of synced records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>