unpackaged/main/default/objects/n2de__Object_sync_log__c/fields/n2de__Status__c.field-meta.xml
<CustomField>
    <fullName>n2de__Status__c</fullName>
    <description>Status of object sync once all related objects for the record have been processed</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>