unpackaged/main/default/objects/n2de__Object_sync_log__c/fields/n2de__Team__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>n2de__Team__c</referenceTo>
    <relationshipName>Team_object_sync_logs</relationshipName>
    <type>Lookup</type>
</CustomField>